--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,90 @@
     transform: rotate(360deg);
   }
 }
+
+/*-------------------------------*/
+
+body {
+  background: -webkit-linear-gradient(#ac708d 70%, #f0847e 100%);
+}
+
+#title {
+  font-family: 'Parisienne', cursive;
+  font-size: 40px;
+  background: -webkit-linear-gradient(#701d45 10%, #99130c 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.webpages {
+  background: -webkit-linear-gradient(#631074 0%, #ff1004bb 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 1.3rem;
+}
+
+.webpages:hover {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #32043b;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: -webkit-linear-gradient(#471052 0%, #ff1004bb 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  z-index: -1;
+}
+
+section {
+  display: flex;
+  height: 80vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero {
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.hero img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+}
+
+#headline {
+  position: absolute;
+  top: 85%;
+  left: 77%;
+  font-size: 5rem;
+  background: -webkit-linear-gradient(#701d45 10%, #99130c 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  z-index: 3;
+  font-family: 'Parisienne', cursive;
+}
+
+.hero::after {
+  content: "";
+  background: black;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0.2;
+}
+
