--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,7 +35,7 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 /*-------------------------------*/
 
@@ -45,17 +45,24 @@ body {
 
 #title {
   font-family: 'Parisienne', cursive;
-  font-size: 40px;
+  font-size: 60px;
   background: -webkit-linear-gradient(#701d45 10%, #99130c 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  font-weight:bold;
+  line-height: 1.4;
 }
 
+.Navbar{
+  margin: 10rem;
+}
 .webpages {
   background: -webkit-linear-gradient(#631074 0%, #ff1004bb 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 1.3rem;
+  font-family: 'Dancing Script', cursive;
+  
 }
 
 .webpages:hover {
@@ -63,53 +70,27 @@ body {
   -webkit-text-fill-color: #32043b;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
-.slider {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background: -webkit-linear-gradient(#471052 0%, #ff1004bb 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  z-index: -1;
-}
 
 section {
   display: flex;
   height: 80vh;
   justify-content: center;
   align-items: center;
+  
 }
 
 .hero {
   height: 100%;
   width: 100%;
   position: relative;
+  
 }
 
 .hero img {
   width: 100%;
   height: 100%;
   object-fit: cover; 
-}
-
-#headline {
-  position: absolute;
-  top: 85%;
-  left: 77%;
-  font-size: 5rem;
-  background: -webkit-linear-gradient(#701d45 10%, #99130c 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  z-index: 3;
-  font-family: 'Parisienne', cursive;
 }
 
 .hero::after {
@@ -120,6 +101,6 @@ section {
   position: absolute;
   left: 0;
   top: 0;
-  opacity: 0.2;
+  opacity: 0.3; 
 }
 
